Bug 1169339 - Fix incorrect tile storage order in TiledContentHost. r=jrmuizel